tests/reference/run-array_size_05_cc-98734df.stderr
semantic error: Only Integer literals or expressions which reduce to constant Integer are accepted as kind parameters.
 --> tests/errors/array_size_05_cc.f90:6:27
  |
6 |     size_a = size(a, kind=kindvar, dim=1)
  |                           ^^^^^^^ 

semantic error: Only Integer literals or expressions which reduce to constant Integer are accepted as kind parameters.
 --> tests/errors/array_size_05_cc.f90:7:27
  |
7 |     size_a = size(a, kind=kindvar)
  |                           ^^^^^^^ 
